# ghDl

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
.omo/: boulder.json
.omo/plans/: github-release-downloader.md
gh_downloader/: __init__.py  __main__.py  api.py  cli.py  config.py  downloader.py  interactive.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_downloader.py  test_integration.py  test_utils.py  test_windows.py
